# molt

./: .gitignore  .gitkeep  45.diff  CONTRIBUTING.md  Cargo.toml  README.md  justfile  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: roadmap.yml
.github/workflows/: benchmarks.yml  ci.yml
crates/molt-arch/: Cargo.toml
crates/molt-arch/src/: audit.rs  dma.rs  irq.rs  lib.rs  memory.rs  mmio.rs  pci.rs
crates/molt-arch/tests/: audit.rs  contracts.rs  inventory.rs  memory.rs  ownership.rs
crates/molt-block/: Cargo.toml
crates/molt-block/src/: device.rs  disk.rs  fault.rs  lib.rs  loopback.rs  write.rs
crates/molt-core/: Cargo.toml
crates/molt-core/benches/: ring.rs  scheduler.rs
crates/molt-core/src/: buffer.rs  cache.rs  capability.rs  cell.rs  completion.rs  executor.rs  interrupt.rs  lib.rs  ring.rs  sync.rs  waker.rs
crates/molt-core/tests/: buffer.rs  capability.rs  cell.rs  completion.rs  executor.rs  interrupt.rs  ring.rs
crates/molt-fs/: Cargo.toml
crates/molt-fs/src/: btree.rs  crc.rs  format.rs  journal.rs  layout.rs  lib.rs  log.rs  name.rs  op.rs  service.rs  store.rs  volume.rs
crates/molt-fs/tests/: cow_tree.rs
crates/molt-pci/: Cargo.toml
crates/molt-pci/src/: address.rs  bar.rs  capability.rs  config.rs  ecam.rs  error.rs  fake.rs  function.rs  lib.rs  message.rs  msi.rs  msix.rs  scan.rs
crates/molt-pci/tests/: enumerate.rs  table.rs
crates/molt-riscv/src/: lib.rs
crates/molt-shell/: Cargo.toml
crates/molt-shell/src/: capture.rs  console.rs  drive.rs  lib.rs  session.rs  shell.rs
crates/molt-virtio/: Cargo.toml
crates/molt-virtio/src/: block.rs  config.rs  lib.rs  notify.rs  queue.rs  request.rs  transport.rs
crates/molt-x86_64/: Cargo.toml
crates/molt-x86_64/src/: interrupts.rs  lib.rs  memory.rs
disk/: hello.txt
disk/docs/: fs.txt  regions.txt
docs/: architecture.md  fs.md  memory.md  pci.md  roadmap.md  style.md  testing.md  virtio.md
docs/hardware/: amd-ryzen-9-9900x-gigabyte.md
experiments/: loom-detects-lost-wakeup.sh  riscv-device-tree-report.patch  x86_64-firmware-report.patch
experiments/qemu-no-shutdown/: README.md  run.sh
experiments/riscv-sbi-legacy-console/: README.md  run.sh
experiments/riscv-wx-regression/: README.md  run.sh
kernel/: Cargo.toml  build.rs  riscv64.ld
kernel/src/: fs.rs  lib.rs  main.rs  pci.rs  virtio.rs
xtask/: Cargo.toml
xtask/src/: main.rs
