[workspace]
resolver = "3"
members = [
    "crates/molt-arch",
    "crates/molt-core",
    "crates/molt-riscv",
    "crates/molt-x86_64",
    "kernel",
    "xtask",
]
default-members = [
    "crates/molt-arch",
    "crates/molt-core",
    "crates/molt-riscv",
    "crates/molt-x86_64",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
bootloader_api = "0.11.15"
molt-arch = { path = "crates/molt-arch" }
molt-core = { path = "crates/molt-core" }
molt-riscv = { path = "crates/molt-riscv" }
molt-x86_64 = { path = "crates/molt-x86_64" }
spin = { version = "0.12.2", default-features = false, features = ["once"] }
x86_64 = { version = "0.15.5", default-features = false, features = ["abi_x86_interrupt", "instructions"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.micro]
inherits = "release"
codegen-units = 1
opt-level = 3
lto = true
strip = true

[profile.nano]
inherits = "micro"
opt-level = "z"
panic = "abort"
