[workspace]
resolver = "3"
members = [
    "crates/molt-arch",
    "xtask",
    "crates/molt-core",
    "crates/platforms/*",
    "kernel",
]
default-members = [
    "xtask",
    "crates/molt-arch",
    "crates/molt-core",
    "crates/platforms/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
molt-arch = { path = "crates/molt-arch" }
molt-core = { path = "crates/molt-core" }
molt-riscv = { path = "crates/platforms/riscv" }
molt-x86_64 = { path = "crates/platforms/x86_64" }
spin = { version = "0.12.2", default-features = false, features = ["once"] }

# platform 

bootloader_api = "0.11.15"
x86_64 = { version = "0.15.5", default-features = false, features = [
    "abi_x86_interrupt",
    "instructions",
] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# loom explores a very large number of executions, so its tests want
# optimization; they also rely on debug assertions to catch model violations,
# which `release` would strip.
[profile.loom]
inherits = "test"
opt-level = 2

[profile.micro]
inherits = "release"
codegen-units = 1
opt-level = 3
lto = true
strip = true

[profile.nano]
inherits = "micro"
opt-level = "z"
panic = "abort"
