[workspace]
resolver = "3"
members = [
    "crates/molt-arch",
    "xtask",
    "crates/molt-block",
    "crates/molt-core",
    "crates/molt-pci",
    "crates/molt-virtio",
    "crates/platforms/*",
    "kernel",
]
default-members = [
    "xtask",
    "crates/molt-arch",
    "crates/molt-block",
    "crates/molt-core",
    "crates/molt-pci",
    "crates/molt-virtio",
    "crates/platforms/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
molt-arch = { path = "crates/molt-arch" }
molt-block = { path = "crates/molt-block" }
molt-core = { path = "crates/molt-core" }
molt-pci = { path = "crates/molt-pci" }
molt-virtio = { path = "crates/molt-virtio" }
molt-riscv = { path = "crates/platforms/riscv" }
molt-x86_64 = { path = "crates/platforms/x86_64" }
spin = { version = "0.12.2", default-features = false, features = ["once"] }

bootloader_api = "0.11.15"
x86_64 = { version = "0.15.5", default-features = false, features = [
    "abi_x86_interrupt",
    "instructions",
] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.loom]
inherits = "test"
opt-level = 2

[profile.micro]
inherits = "release"
codegen-units = 1
opt-level = 3
lto = true
strip = true

[profile.nano]
inherits = "micro"
opt-level = "z"
panic = "abort"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(loom)"] }

[workspace.lints.clippy]
missing_safety_doc = { level = "warn" }
undocumented_unsafe_blocks = { level = "warn" }
