[package]
name = "molt-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "molt-kernel"
path = "src/main.rs"
test = false
bench = false

# Panics on purpose once the Stage 1 checks pass, so `cargo smoke` can prove the
# platform panic handler still reaches the console. Never enabled in a shipped
# build.
[features]
panic-smoke = []

[dependencies]
molt-arch.workspace = true
molt-core.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
molt-x86_64.workspace = true

[target.'cfg(target_arch = "riscv64")'.dependencies]
molt-riscv.workspace = true
