[package]
name = "molt-kernel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "molt-kernel"
path = "src/main.rs"
test = false
bench = false

[features]
panic-smoke = []

[dependencies]
molt-arch.workspace = true
molt-block.workspace = true
molt-core.workspace = true
molt-pci.workspace = true
molt-virtio.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
molt-x86_64.workspace = true

[target.'cfg(target_arch = "riscv64")'.dependencies]
molt-riscv.workspace = true
