[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
bootloader = "0.11.15"
molt-fs = { workspace = true, features = ["format"] }

[dev-dependencies]
molt-block.workspace = true
molt-core.workspace = true
