[package]
name = "molt-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

# Criterion flags apply only to the named bench targets.
[lib]
bench = false

[dev-dependencies]
criterion = "0.7"

# Shipped targets never link this `--cfg loom` dependency.
[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[[bench]]
name = "ring"
harness = false

[[bench]]
name = "scheduler"
harness = false
