[package]
name = "molt-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[lib]
bench = false

[dev-dependencies]
criterion = "0.7"

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[[bench]]
name = "ring"
harness = false

[[bench]]
name = "scheduler"
harness = false
