[package]
name = "molt-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
molt-core.workspace = true
molt-fs.workspace = true

[dev-dependencies]
molt-block.workspace = true
molt-fs = { workspace = true, features = ["format"] }

[lib]
bench = false
